feat: Support aggregate alarm details return #727
