# api/internal/router/router.go
@@ -8,10 +8,10 @@ import (
 	"github.com/gotomicro/ego/core/econf"
 	"github.com/gotomicro/ego/server/egin"
 
-	"github.com/clickvisual/clickvisual/api/internal/api/apiv1/alarm"
 	"github.com/clickvisual/clickvisual/api/internal/api/apiv1/initialize"
 	"github.com/clickvisual/clickvisual/api/internal/api/apiv1/template"
 	"github.com/clickvisual/clickvisual/api/internal/api/apiv1/user"
+	"github.com/clickvisual/clickvisual/api/internal/api/apiv2/alert"
 	"github.com/clickvisual/clickvisual/api/internal/invoker"
 	"github.com/clickvisual/clickvisual/api/internal/middlewares"
 	"github.com/clickvisual/clickvisual/api/pkg/component/core"
@@ -50,8 +50,7 @@ func GetRouter() *egin.Component {
 	}
 	v1Open := r.Group(apiPrefix + "/v1")
 	{
-		v1Open.POST("/prometheus/alerts", core.Handle(alarm.Webhook))                 // webhook
-		v1Open.POST("/alarms-channels/send-test", core.Handle(alarm.ChannelSendTest)) // alarms send test
+		v1Open.POST("/prometheus/alerts", core.Handle(alert.Webhook))
 		v1Open.POST("/template/:id", core.Handle(template.Gen))
 		v1Open.POST("/install", core.Handle(initialize.Install))
 		v1Open.GET("/install", core.Handle(initialize.IsInstall))
